force-app/main/default/objects/Reuters_History__c/Reuters_History__c.object-meta.xml
<CustomObject>
    <label>Reuters History</label>
    <nameField>
        <displayFormat>Reut-Hist-{00000000}</displayFormat>
        <label>Reuters History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reuters Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>