force-app/main/default/objects/Reuters_History__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <description>Field to store Currency code related to Reuters Quote</description>
    <label>CurrencyCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>