force-app/main/default/objects/Reuters_History__c/fields/Quote_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Display_Name__c</fullName>
    <label>Quote Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>