force-app/main/default/objects/Reuters_History__c/fields/RE_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Country_Name__c</fullName>
    <label>Country Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_Revolution_Country</valueSetName>
    </valueSet>
</CustomField>