force-app/main/default/objects/Reuters_History__c/fields/Reuter_Id__c.field-meta.xml
<CustomField>
    <fullName>Reuter_Id__c</fullName>
    <label>Reuter Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>