force-app/main/default/objects/Reuters_History__c/fields/Reuter_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Reuter_Last_Modified_Date__c</fullName>
    <label>Reuter Last Modified Date</label>
    <type>DateTime</type>
</CustomField>