force-app/main/default/objects/Reuters_History__c/fields/Reuters_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Reuters_Created_Date__c</fullName>
    <label>Reuters Created Date</label>
    <type>DateTime</type>
</CustomField>