force-app/main/default/objects/Reuters_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Valid_To_Date__c</columns>
    <columns>Valid_Month__c</columns>
    <columns>Valid_From_Date__c</columns>
    <columns>Unit_Of_Measure__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reuters_Created_Date__c</columns>
    <columns>Reuters_Code__c</columns>
    <columns>Reuter_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>Pricing_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>