force-app/main/default/objects/Reuters_History__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>Quote_Display_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reuters_Created_Date__c</columns>
    <columns>Price__c</columns>
    <columns>Pricing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>